--- a/index.html
+++ b/index.html
@@ -1,8 +1,12 @@
+<!DOCTYPE html>
 <html>
-	<head>
-		<title>Mi página de ejemplo</title>
-	</head>
-	<body>
-	Aquí va el contenido
-	</body>
+    <head>
+        <meta charset="UTF-8">
+        <title>Mi pag eje</title>
+        <meta name="viewport" content="width=device-width, initial-scale=1">
+    </head>
+
+    <body>
+        <p>Texto de prueba</p>
+    </body>
 </html>
