--- a/index.html
+++ b/index.html
@@ -4,9 +4,17 @@
         <meta charset="UTF-8">
         <title>Mi pag eje</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
+		<link rel="stylesheet" type="text/css" href="styles.css">
+		<link rel="preconnect" href="https://fonts.googleapis.com">
+<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+<link href="https://fonts.googleapis.com/css2?family=Arimo&display=swap" rel="stylesheet">
     </head>
 
     <body>
-        <p>Texto de prueba</p>
+        <p>Autor: Daniel Zahid Galvan Vargas</p>
+		<p>Titulo: Desde el anonimato</p>
+		<p>Desde el anonimato es una obra compuesta por documentacion fotografica en la que sertratan emociones que presenta un transeunte al subir a una combi</p>
+		<p>Se ocupan 3 conceptos, los cuales son importantes para conocer las causas del comportamiento de las personas, los cuales son: los no lugares para la estructura donde hace que usar una combi no sea un espacio para la convivenbcia; La otredad que es la que nos hace reconocer al otro como persona, y la normalidad en masa, ejercida regularmente cuando los comportamientos se replican estando en multitud.</p>
+		<p>La cartografia del municipio de Ecaatepec nos muestra los distintos puntos recurrentes de la parada de los transeuntes. El usuario tendra la libertad de explorar cada punto donde se almacenaran las fotografias y distintos testimonio sobre la calidad y experiencias</p>
     </body>
 </html>
