--- a/index.html
+++ b/index.html
@@ -11,10 +11,25 @@
     </head>
 
     <body>
-        <p>Autor: Daniel Zahid Galvan Vargas</p>
+        <div class="contenedor">
+        <h3>Daniel Zahid Galvan Vargas</h3>
 		<p>Titulo: Desde el anonimato</p>
 		<p>Desde el anonimato es una obra compuesta por documentacion fotografica en la que sertratan emociones que presenta un transeunte al subir a una combi</p>
 		<p>Se ocupan 3 conceptos, los cuales son importantes para conocer las causas del comportamiento de las personas, los cuales son: los no lugares para la estructura donde hace que usar una combi no sea un espacio para la convivenbcia; La otredad que es la que nos hace reconocer al otro como persona, y la normalidad en masa, ejercida regularmente cuando los comportamientos se replican estando en multitud.</p>
 		<p>La cartografia del municipio de Ecaatepec nos muestra los distintos puntos recurrentes de la parada de los transeuntes. El usuario tendra la libertad de explorar cada punto donde se almacenaran las fotografias y distintos testimonio sobre la calidad y experiencias</p>
+        <p></p>
+        <h3>Biografía</h3>
+        <p>Soy Daniel, tengo 22 años, vivo en el municipio de Ecatepec Estado de México, y actualmente
+        estudio la licenciatura de Arte y Comunicación Digitales. Desde la preparatoria la creación de
+        contenido audiovisual y la ilustración llamaron mi interés, es por eso que decidí estudiar esta
+        carrera, aunque actualmente me siento atraído por la postproducción, animación y la cartografía.
+        He participado en la comisión de diseño del Festival Desfases 2022, en el videomapping Nosotros
+        somos Calavera, para el ayuntamiento del municipio de Lerma de Villada y hace poco en la
+        exposición Metamorfosis con la pieza “Desde el anonimato a la normalidad” presentada en la sala
+        de usos múltiples en la UAM Lerma.</p>
+    <p>Mi enfoque del arte ha cambiado desde que me di cuenta que hay más formas de ver y crear arte
+    (además del arte plástico que siempre nos han enseñado). Si tuviera que mencionar una cualidad
+        mía seria que me gusta aprender nuevas maneras de resolver problemáticas.</p>
+        </div>
     </body>
 </html>
